--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,11 @@
+build --bes_backend=grpcs://REPLACE_ME
+build --bes_results_url=https://REPLACE_ME/build/
+build --remote_cache=grpcs://REPLACE_ME
+build --noslim_profile
+build --curses=no
+build --color=no
+build --show_timestamps
+
 try-import .bazelrc.local
 
 build --flag_alias=pin_browsers=//common:pin_browsers
